Update the code based on review comments
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>